--- a/style.css
+++ b/style.css
@@ -1,18 +1,8 @@
 ::root {
-  
+
 }
 
-
-
-
 body {
-  display: grid;
-  /*flex-direction: column;*/
-  grid-template-rows:1fr auto 1fr;
-  grid-template-columns: 100%;
-  grid-template-areas: "nav"
-                       "main"
-                       "footer";
   grid-gap: 1rem;
   height: 100vh;
   text-decoration: none;
@@ -22,28 +12,50 @@ body {
 }
 
 nav {
-  grid-area: nav;
   top: 0;
-  position: relative;
+  position: fixed;
+  height: 3em;
 }
 
 .mobile__list {
   text-decoration: none;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 2rem;
-  grid-gap: 1rem;
+  grid-template-rows: 100%;
+  grid-gap: 8rem;
   width: 100%;
   z-index: 1;
   list-style-type: none;
-  background-color: blue;
-  background-color: white;
+  position: fixed;
+  height: inherit;
+  place-items: center;
+  margin: 0;
+  padding: 0;
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.15),  0 -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
+  left: 0;
+  right: 0;
 }
 
 .mobile__list > ul {
-  height: 100%;
-  z-index: 2;
+  height: 2rem;
+  z-index: 1;
   position: fixed;
+}
+
+.list-item {
+  place-self: center;
+  width: 100%;
+  position: relative;
+  display: grid;
+  place-content: center;
+  height: 100%;
+  border-bottom: 0.1rem solid black;
+  border-top: 0.1rem solid black;
+}
+
+.style__nav {
+  background-color: #f1f1f1;
+  width: 100%;
 }
 
 main {
@@ -76,7 +88,8 @@ i {
 
 footer {
   grid-area: footer;
-  z-index: 2;
+  position: fixed;
+  z-index: 1;
   bottom: 0;
-  height: 2rem;
+  height: 4em;
 }
