--- a/style.css
+++ b/style.css
@@ -52,6 +52,22 @@ nav {
   border-bottom: 0.1rem solid black;
   border-top: 0.1rem solid black;
 }
+.list-item::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  box-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0),  0 -0.3rem 0.5rem rgba(0, 0, 0, 0);
+  transition-property: box-shadow;
+  transition-duration: 200ms;
+  z-index: -1;
+}
+
+.list-item:hover::before {
+  box-shadow: 0 0.3rem 0.5rem -0.3rem rgba(0, 0, 0, 1),  0 -0.3rem 0.5rem -0.3rem rgba(0, 0, 0, 1);
+}
 
 .style__nav {
   background-color: #f1f1f1;
@@ -84,6 +100,7 @@ card {
 
 i {
   font-size: 2em;
+  display: relative;
 }
 
 footer {
@@ -92,4 +109,8 @@ footer {
   z-index: 1;
   bottom: 0;
   height: 4em;
+}
+
+.company-color {
+  color: rgba(255, 57, 57, 0.897)
 }
