--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --pinnedHeight: 3rem;
   --primaryColor: rgb(25,118,210);
   --primaryColorDarker: rgb(0,75,160);
-  --primaryColorLighter: rgb(99,164,255);
+  --primaryColorLighter: #eee;
   --secondaryColor: rgb(244,67,54);
   --secondaryColorDarker: rgb(186,0,13);
   --secondaryColorLighter: rgb(255,121,97);
@@ -19,7 +19,6 @@
 
 body {
   grid-gap: 1rem;
-  max-height: 100vh;
   max-width: 100vw;
   text-decoration: none;
   color: #333;
@@ -27,6 +26,7 @@ body {
   padding: 0;
   font-size: var(--fontSize);
   overflow: hidden;
+  background-color: var(--primaryColorLighter);
 }
 
 nav {
@@ -41,7 +41,6 @@ nav {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 100%;
-  grid-gap: 8rem;
   width: 100%;
   z-index: 1;
   list-style-type: none;
@@ -50,9 +49,10 @@ nav {
   place-items: center;
   margin: 0;
   padding: 0;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.15),  0 -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1),  0 -0.25rem 0.25rem rgba(0, 0, 0, 0.15);
   left: 0;
   right: 0;
+  background-color: #f1f1f1;
 }
 
 .mobile__list > ul {
@@ -69,82 +69,77 @@ nav {
   display: grid;
   place-content: center;
   height: 100%;
-  border-bottom: 0.1rem solid black;
-  border-top: 0.1rem solid black;
-}
-.style__nav {
-  background-color: #f1f1f1;
-  width: 100%;
-  background-color: var(--primaryColor);
 }
 
 main {
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(min-content, 500px));
-  grid-template-columns: repeat(auto-fit, minmax(100px, max-content));
-  place-content: top;
+  grid-template-rows: repeat(auto-fill,minmax(10rem, 200px));
+  grid-template-columns: repeat(auto-fill, minmax(1rem, 300px));
+  place-items: center;
   background-color: var(--primaryColorLighter);
-  padding: calc(var(--pinnedHeight) * 1.25) var(--pinnedHeight);
-  grid-gap: 1rem;
-  max-width: 95vw;
-  height: calc(100vh - var(--pinnedHeight));
-  overflow: hidden;
+  padding: calc(var(--pinnedHeight) * 1.25) 0.5rem;
+  column-gap: 0.5rem;
+  min-height: calc(100vh - var(--pinnedHeight));
+  min-width: 100%;
 }
-
-  main::-webkit-scrollbar {
-    width: 5px;
-    color: aqua;
-  }
 
   card {
     position: relative;
     height: min-content;
     display: grid;
-    grid-template-rows: 2fr 1fr 1fr;
-    grid-template-columns: minmax(min-content, 300px);
-    grid-template-areas:
-    "image"
-    "header"
-    "content";
-    grid-gap: 1rem;
+    grid-template:
+      "title" 2rem
+      "caption" 6rem / 300px;
+    max-width: 300px;
+    row-gap: 0.5rem;
     place-content: center;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid transparent;
     border-radius: 5px;
-    background-color: #ffffff;
     z-index: 1;
     text-align: center;
+    overflow:hidden;
   }
 
     .card__header {
-      display: grid;
-      place-items: center;
       font-size: var(--xxLargeFont);
-      grid-area: header;
+      grid-area: title;
       font-family: 'Gentium Basic', serif;
+      color: rgba(255, 255, 255, 1);
+      opacity: 1;
+      width: 100%;
+      height: 1em;
+      place-content: start;
     }
 
     .card__img {
+      object-fit: cover;
+      border: 1px solid transparent;
+      border-radius: 5px;
       width: 100%;
       height: 100%;
       position: relative;
-      grid-area: image;
-      display: grid;
-      place-items: center;
+      grid-column: title-start / caption-end;
+      grid-row: title-start / caption-end;
+      z-index: -1;
+      opacity: 0.85;
     }
-
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      border: 1px solid transparent;
-      border-radius: 5px;
-    }
-
     .card__text {
-      grid-area: content;
+      background-color: rgba(255, 255,255, 0);
+      grid-area: caption;
       font-family: 'Rubik', sans-serif;
       max-width: 20em;
+      height: 100%;
+      width: 100%;
+      padding-top: 1rem;
+      opacity: 0;
+      transition: opacity 250ms ease-in, background-color 300ms ease-out;
     }
+      card:hover > .card__text {
+        background-color: rgba(255, 255,255, 1);
+        color: rgba(0, 0, 0, 1);
+        opacity: 1;
+        transition: opacity 250ms ease-out, background-color 300ms ease-out;
+      }
 
 i {
   font-size: 2em;
@@ -160,6 +155,7 @@ footer {
   height: var(--pinnedHeight);
   width: 100%;
   backface-visibility: hidden;
+  display: none;
 }
 
 .company-color {
