--- a/style.css
+++ b/style.css
@@ -18,7 +18,10 @@
 }
 
 body {
-  grid-gap: 1rem;
+  display: grid;
+  grid:
+  "header header header" 2rem
+  ". main ." 1fr/ 1rem 1fr 1rem;
   max-width: 100vw;
   text-decoration: none;
   color: #333;
@@ -34,6 +37,7 @@ nav {
   position: fixed;
   height: var(--pinnedHeight);
   z-index: 2;
+  grid-area: header;
 }
 
 .mobile__list {
@@ -72,15 +76,25 @@ nav {
 }
 
 main {
+  grid-area: main;
   display: grid;
-  grid-template-rows: repeat(auto-fill,minmax(10rem, 200px));
-  grid-template-columns: repeat(auto-fill, minmax(1rem, 300px));
-  place-items: center;
+  grid: ". content ." 1fr / 1rem 1fr 1rem;
   background-color: var(--primaryColorLighter);
   padding: calc(var(--pinnedHeight) * 1.25) 0.5rem;
   column-gap: 0.5rem;
   min-height: calc(100vh - var(--pinnedHeight));
-  min-width: 100%;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
+
+features {
+  grid-area: content;
+  display: grid;
+  grid-template-rows: repeat(auto-fill,minmax(10rem, 200px));
+  grid-template-columns: 1fr;
+  place-items: center;
+  width: 100%;
 }
 
   card {
@@ -89,7 +103,7 @@ main {
     display: grid;
     grid-template:
       "title" 2rem
-      "caption" 6rem / 300px;
+      "caption" 6rem / 1fr;
     max-width: 300px;
     row-gap: 0.5rem;
     place-content: center;
