--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
 :root {
   font-family: 'Rubik', sans-serif;
   --pinnedHeight: 3rem;
   --primaryColor: rgb(25,118,210);
   --primaryColorDarker: rgb(0,75,160);
-  --primaryColorLighter: #eee;
+  --primaryColorLighter: rgb(225, 225, 225);
   --secondaryColor: rgb(244,67,54);
   --secondaryColorDarker: rgb(186,0,13);
   --secondaryColorLighter: rgb(255,121,97);
@@ -15,116 +17,184 @@
   --xLargeFont: 1.5em;
   --xxLargeFont: 2em;
   --titleFont: 6em;
+  --cardGridSingleColumn:
+  "title" 2rem
+  "middle" 6rem
+  "lower" 3rem / 1fr;
 }
 
 body {
-  display: grid;
-  grid:
-  "header header header" 2rem
-  ". main ." 1fr/ 1rem 1fr 1rem;
-  max-width: 100vw;
   text-decoration: none;
   color: #333;
-  margin: 0;
-  padding: 0;
   font-size: var(--fontSize);
-  overflow: hidden;
   background-color: var(--primaryColorLighter);
+  overflow-x: hidden;
 }
 
-nav {
-  top: 0;
-  position: fixed;
-  height: var(--pinnedHeight);
-  z-index: 2;
-  grid-area: header;
-}
-
-.mobile__list {
-  text-decoration: none;
+main {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 100%;
-  width: 100%;
-  z-index: 1;
-  list-style-type: none;
-  position: fixed;
-  height: inherit;
-  place-items: center;
+  grid:
+  "header" 2rem
+  "main" auto
+  "footer" 5rem / 1fr;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
-  box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1),  0 -0.25rem 0.25rem rgba(0, 0, 0, 0.15);
-  left: 0;
-  right: 0;
-  background-color: #f1f1f1;
+}
+.hide-link {
+  text-decoration: none;
 }
 
-.mobile__list > ul {
-  height: 2rem;
-  z-index: 1;
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.15);
+a {
+  cursor: pointer;
 }
+/* Navigation */
+  header {
+    top: 0;
+    position: fixed;
+    height: var(--pinnedHeight);
+    z-index: 2;
+    grid-area: header;
+  }
 
-.list-item {
-  place-self: center;
-  width: 100%;
-  position: relative;
-  display: grid;
-  place-content: center;
-  height: 100%;
-}
+  menu{
+    position: absolute;
+    display: grid;
+    top: 0;
+    left: 0;
+    right: 12rem;
+    z-index: -10;
+    place-content: center;
+  }
 
+  #menu-list, #menu-list ul{
+    list-style-type: none;
+    display: grid;
+    grid-auto-flow: row;
+    margin: 0 auto;
+    row-gap: 4rem;
+  }
+
+  #menu-button {
+    position: relative;
+    font-family: 'lato', serif;
+    place-self: start;
+    left: 0.4rem;
+  }
+
+  .nav svg {
+    position: relative;
+    transform: rotate(90deg) scaleX(-1.2);
+    color: var(--primaryColor);
+  }
+
+  a:hover svg {
+    color: var(--secondaryColor)
+  }
+
+  .burger {
+    display: grid;
+    width: 100;
+    grid-auto-flow: column;
+    column-gap: 1rem;
+    width: 100%;
+    left: 0;
+    position: absol;
+  }
+
+  .nav {
+    text-decoration: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100%;
+    width: 100%;
+    z-index: 1;
+    list-style-type: none;
+    position: fixed;
+    height: inherit;
+    place-items: center;
+    margin: 0;
+    padding: 0;
+    box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1),  0 -0.25rem 0.25rem rgba(0, 0, 0, 0.15);
+    left: 0;
+    right: 0;
+    background-color: #f1f1f1;
+  }
+    .nav > ul {
+      height: 2rem;
+      z-index: 1;
+      position: fixed;
+    }
+
+    .nav > a {
+      text-decoration: none;
+    }
+    .list-item {
+      width: 100%;
+      position: relative;
+      display: grid;
+      place-content: center;
+      height: 100%;
+    }
+/* Navigation end */
 main {
   grid-area: main;
   display: grid;
   grid: ". content ." 1fr / 1rem 1fr 1rem;
-  background-color: var(--primaryColorLighter);
+  background-color: white;
   padding: calc(var(--pinnedHeight) * 1.25) 0.5rem;
   column-gap: 0.5rem;
   min-height: calc(100vh - var(--pinnedHeight));
   margin: 0 auto;
   width: 100%;
   height: 100%;
+  transition: transform .4s linear,
+              opacity .2s linear .2s,
+              visibility 0s linear .4s;
+  transition-timing-function: cubic-bezier(.8,0,.6,1), linear, linear;
 }
-
+/* Main display items */
 features {
   grid-area: content;
   display: grid;
-  grid-template-rows: repeat(auto-fill,minmax(10rem, 200px));
+  grid-template-rows: repeat(auto-fill, minmax(200px, 250px));
   grid-template-columns: 1fr;
   place-items: center;
+  row-gap: 1rem;
   width: 100%;
+  padding: 0 auto;
 }
 
+/* Feature card with a centalised image */
   card {
     position: relative;
-    height: min-content;
+    height: 15rem;
     display: grid;
-    grid-template:
-      "title" 2rem
-      "caption" 6rem / 1fr;
-    max-width: 300px;
+    grid: var(--cardGridSingleColumn);
+    width: 290px;
     row-gap: 0.5rem;
     place-content: center;
     border: 1px solid transparent;
     border-radius: 5px;
-    z-index: 1;
+    z-index: 0;
     text-align: center;
-    overflow:hidden;
+    overflow: hidden;
+    background-color: var(--primaryColorLighter);
+    cursor: pointer;
   }
-
     .card__header {
-      font-size: var(--xxLargeFont);
+      font-size: var(--largeFont);
       grid-area: title;
-      font-family: 'Gentium Basic', serif;
-      color: rgba(255, 255, 255, 1);
+      font-family: 'Rubik', serif;
+      color: rgba(0, 0, 0, 1);
       opacity: 1;
       width: 100%;
-      height: 1em;
-      place-content: start;
+      height: 2em;
+      margin: 0;
+      word-wrap: none;
+      margin: 0;
+      padding: 0;
     }
-
     .card__img {
       object-fit: cover;
       border: 1px solid transparent;
@@ -132,33 +202,32 @@ features {
       width: 100%;
       height: 100%;
       position: relative;
-      grid-column: title-start / caption-end;
-      grid-row: title-start / caption-end;
+      grid-column: title-start / title-end;
+      grid-row: middle-start / lower-end;
       z-index: -1;
-      opacity: 0.85;
     }
     .card__text {
-      background-color: rgba(255, 255,255, 0);
-      grid-area: caption;
+      background-color: var(--secondaryColor);
+      grid-area: lower;
       font-family: 'Rubik', sans-serif;
       max-width: 20em;
       height: 100%;
       width: 100%;
       padding-top: 1rem;
       opacity: 0;
-      transition: opacity 250ms ease-in, background-color 300ms ease-out;
+      transition: opacity 100ms ease-in, background-color 150ms ease-out;
+      z-index: 10;
     }
       card:hover > .card__text {
-        background-color: rgba(255, 255,255, 1);
         color: rgba(0, 0, 0, 1);
         opacity: 1;
-        transition: opacity 250ms ease-out, background-color 300ms ease-out;
+        transition: opacity 100ms ease-out, background-color 150ms ease-out;
       }
 
 i {
   font-size: 2em;
   display: relative;
-  color: var(--secondaryColorDarker);
+  color: var(--primaryColor);
 }
 
 footer {
@@ -173,5 +242,22 @@ footer {
 }
 
 .company-color {
-  color: rgba(255, 57, 57, 0.897)
+  color: rgba(255, 57, 57, 1)
+}
+
+/* Menu button animation on mobile */
+.menu-transform-body {
+  transform: scale(.9) translateX(90%);
+}
+
+.menu-transform-body::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.2);
+  pointer-events: none;
 }
