--- a/css/material-design-helpers.css
+++ b/css/material-design-helpers.css
@@ -1,8 +1,14 @@
 .material-shadow {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    -webkit-transition: -webkit-box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+    transition: -webkit-box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+    -o-transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
     transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+    transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1), -webkit-box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .material-shadow:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
