--- a/css/menuTransformation.css
+++ b/css/menuTransformation.css
@@ -10,8 +10,11 @@
 
 @media (min-width: 576px){
   .menu-transform-body {
+    display: -ms-grid;
     display: grid;
-    transform: scale(.6) translateX(40%) rotate(20deg);
+    -webkit-transform: scale(.8) translateX(20%) rotate(5deg);
+        -ms-transform: scale(.8) translateX(20%) rotate(5deg);
+            transform: scale(.8) translateX(20%) rotate(5deg);
   }
 
   .menu-transform-body::after{
@@ -24,5 +27,23 @@
     z-index: 100;
     background-color: rgba(0, 0, 0, 0.2);
     pointer-events: none;
+  }
+}
+
+@media (min-width: 1024px){
+  .menu-transform-body {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transform: translateX(20%);
+        -ms-transform: translateX(20%);
+            transform: translateX(20%);
+  }
+}
+
+@media (prefers-reduced-motion: reduce){
+  main {
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
   }
 }
