--- a/css/xSmallDevice.css
+++ b/css/xSmallDevice.css
@@ -18,12 +18,12 @@
   --largeFont: 1.125em;
   --xLargeFont: 1.5em;
   --xxLargeFont: 2em;
-  --titleFont: 6em;
+  --titleFont: 5em;
   --cardGridSingleColumn:
   "title" 2rem
   "middle" 6rem
   "lower" 3rem / 1fr;
-  --mainContentGrid: ". content ." 1fr / 1rem 1fr 1rem;
+  font-display: fallback;
 }
 
 body {
@@ -39,18 +39,32 @@ body {
 main {
   position: relative;
   background-color: white;
+  display: -ms-grid;
   display: grid;
-  grid:
-  "header" 2rem
-  "main" auto
-  "footer" 5rem / 1fr;
+  grid-auto-rows: -webkit-min-content;
+  grid-auto-rows: min-content;
   overflow-x: hidden;
   min-height: 100vh;
   width: 100vw;
+  -webkit-transition: opacity .2s linear .2s,
+              visibility 0s linear .4s,
+              -webkit-transform .4s linear;
+  transition: opacity .2s linear .2s,
+              visibility 0s linear .4s,
+              -webkit-transform .4s linear;
+  -o-transition: transform .4s linear,
+              opacity .2s linear .2s,
+              visibility 0s linear .4s;
   transition: transform .4s linear,
               opacity .2s linear .2s,
               visibility 0s linear .4s;
-  transition-timing-function: ease-in-out, linear, linear;
+  transition: transform .4s linear,
+              opacity .2s linear .2s,
+              visibility 0s linear .4s,
+              -webkit-transform .4s linear;
+  -webkit-transition-timing-function: ease-in-out, linear, linear;
+       -o-transition-timing-function: ease-in-out, linear, linear;
+          transition-timing-function: ease-in-out, linear, linear;
 }
 
 /* Navigation */
@@ -74,6 +88,7 @@ menu {
 #menu-list, #menu-list ul{
   position: relative;
   list-style-type: none;
+  display: -ms-grid;
   display: grid;
   grid-auto-flow: row;
   row-gap: 2rem;
@@ -82,7 +97,8 @@ menu {
 
 #menu-list li {
   width: 20rem;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   height: 100%;
 }
 
@@ -127,6 +143,8 @@ menu {
 #menu-button {
   position: relative;
   font-family: 'lato', serif;
+  -ms-grid-row-align: start;
+  -ms-grid-column-align: start;
   place-self: start;
   left: 0.4rem;
   top: 10px;
@@ -134,7 +152,9 @@ menu {
 
 .nav svg {
   position: relative;
-  transform: rotate(90deg) scaleX(-1.2);
+  -webkit-transform: rotate(90deg) scaleX(-1.2);
+      -ms-transform: rotate(90deg) scaleX(-1.2);
+          transform: rotate(90deg) scaleX(-1.2);
   color: var(--primaryColor);
 }
 
@@ -143,19 +163,25 @@ a:hover svg {
 }
 
 .burger {
+  display: -ms-grid;
   display: grid;
-  width: 100;
   grid-auto-flow: column;
-  column-gap: 1rem;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
   width: 100%;
+  height: 100%;
+  top: 0!important;
   left: 0;
-  position: absol;
+  position: absolute;
 }
 
 .nav {
   text-decoration: none;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 100%;
   grid-template-rows: 100%;
   width: 100%;
   z-index: 1;
@@ -165,10 +191,26 @@ a:hover svg {
   place-items: center;
   margin: 0;
   padding: 0;
-  box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1),  0 -0.25rem 0.25rem rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1),  0 -0.25rem 0.25rem rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1),  0 -0.25rem 0.25rem rgba(0, 0, 0, 0.15);
   left: 0;
   right: 0;
-  background-color: #f1f1f1;
+  background-color: var(--primaryColorLighter);
+}
+
+.nav > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+
+.nav > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+}
+
+.nav > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
 }
   .nav > ul {
     height: 2rem;
@@ -176,22 +218,27 @@ a:hover svg {
     position: fixed;
   }
 
+  .nav img {
+    height: 2rem;
+  }
+
   .nav > a {
     text-decoration: none;
   }
   .list-item {
-    width: 100%;
-    position: relative;
+    display: -ms-grid;
     display: grid;
-    place-content: center;
-    height: 100%;
+    position: relative;
+    -ms-flex-line-pack: baseline;
+        align-content: baseline;
   }
 /* Navigation end */
 features {
-  grid-area: content;
+  margin-top: 4rem;
+  grid-area: main;
+  display: -ms-grid;
   display: grid;
   grid-template-rows: repeat(auto-fill, minmax(200px, 250px));
-  grid-template-columns: 1fr;
   place-items: center;
   row-gap: 1rem;
   width: 100vw;
@@ -200,6 +247,7 @@ features {
 card {
   position: relative;
   height: 15rem;
+  display: -ms-grid;
   display: grid;
   grid: var(--cardGridSingleColumn);
   width: 200px;
@@ -227,7 +275,8 @@ card {
     padding: 0;
   }
   .card__img {
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     border: 1px solid transparent;
     border-radius: 5px;
     width: 100%;
@@ -246,12 +295,16 @@ card {
     width: 100%;
     padding-top: 1rem;
     opacity: 0;
+    -webkit-transition: opacity 100ms ease-in, background-color 150ms ease-out;
+    -o-transition: opacity 100ms ease-in, background-color 150ms ease-out;
     transition: opacity 100ms ease-in, background-color 150ms ease-out;
     z-index: 10;
   }
     card:hover > .card__text {
       color: rgba(0, 0, 0, 1);
       opacity: 1;
+      -webkit-transition: opacity 100ms ease-out, background-color 150ms ease-out;
+      -o-transition: opacity 100ms ease-out, background-color 150ms ease-out;
       transition: opacity 100ms ease-out, background-color 150ms ease-out;
     }
 /* Feature card end */
@@ -261,22 +314,29 @@ footer {
   margin: 1rem 0;
   width: 100vw;
   background: #333;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .footer-list {
+  display: -ms-grid;
   display: grid;
   grid-auto-flow: row;
   grid-auto-columns: 1fr;
+  grid-auto-rows: -webkit-max-content;
   grid-auto-rows: max-content;
   width: 100%;
   margin: 0;
   padding: 1rem 0;
+  height: -webkit-min-content;
+  height: -moz-min-content;
   height: min-content;
   place-content: center;
 }
 
 .footer-list-item {
+  display: -ms-grid;
   display: grid;
   place-content: center;
   grid-auto-rows: 1.5rem;
@@ -293,3 +353,7 @@ footer {
   color: bisque;
 }
 /* Footer end */
+
+#mobileShareButton {
+  display: none;
+}
