--- a/css/menuTransformation.css
+++ b/css/menuTransformation.css
@@ -1,49 +1,1 @@
-/*
-  Menu button effect on very small devices
-  does not display correctly and must therefore be
-  a simple switch.
-*/
-
-.menu-transform-body {
-  display: none;
-}
-
-@media (min-width: 576px){
-  .menu-transform-body {
-    display: -ms-grid;
-    display: grid;
-    -webkit-transform: scale(.8) translateX(20%) rotate(5deg);
-        -ms-transform: scale(.8) translateX(20%) rotate(5deg);
-            transform: scale(.8) translateX(20%) rotate(5deg);
-  }
-
-  .menu-transform-body::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    z-index: 100;
-    background-color: rgba(0, 0, 0, 0.2);
-    pointer-events: none;
-  }
-}
-
-@media (min-width: 1024px){
-  .menu-transform-body {
-    display: -ms-grid;
-    display: grid;
-    -webkit-transform: translateX(20%);
-        -ms-transform: translateX(20%);
-            transform: translateX(20%);
-  }
-}
-
-@media (prefers-reduced-motion: reduce){
-  main {
-    -webkit-transition: none;
-    -o-transition: none;
-    transition: none;
-  }
-}
+.menu-transform-body{display:none}@media (min-width:576px){.menu-transform-body{display:-ms-grid;display:grid;-webkit-transform:scale(.8) translateX(20%) rotate(5deg);-ms-transform:scale(.8) translateX(20%) rotate(5deg);transform:scale(.8) translateX(20%) rotate(5deg)}.menu-transform-body::after{content:'';position:absolute;width:100%;height:100%;left:0;top:0;z-index:100;background-color:rgba(0,0,0,.2);pointer-events:none}}@media (min-width:1024px){.menu-transform-body{display:-ms-grid;display:grid;-webkit-transform:translateX(20%);-ms-transform:translateX(20%);transform:translateX(20%)}}@media (prefers-reduced-motion:reduce){main{-webkit-transition:none;-o-transition:none;transition:none}}
