--- a/css/xSmallDevice.css
+++ b/css/xSmallDevice.css
@@ -1,359 +1,1 @@
-/*
-  No media query here as this is a mobile first design
-*/
-
-:root {
-  font-family: 'Rubik', sans-serif;
-  --pinnedHeight: 3rem;
-  --primaryColor: rgb(25,118,210);
-  --primaryColorDarker: rgb(0,75,160);
-  --primaryColorLighter: rgb(225, 225, 225);
-  --secondaryColor: rgb(244,67,54);
-  --secondaryColorDarker: rgb(186,0,13);
-  --secondaryColorLighter: rgb(255,121,97);
-  --fontSize: 12px;
-  --xSmallFont: 0.65em;
-  --smallFont: 0.8333em;
-  --normalFont: 1em;
-  --largeFont: 1.125em;
-  --xLargeFont: 1.5em;
-  --xxLargeFont: 2em;
-  --titleFont: 5em;
-  --cardGridSingleColumn:
-  "title" 2rem
-  "middle" 6rem
-  "lower" 3rem / 1fr;
-  font-display: fallback;
-}
-
-body {
-  text-decoration: none;
-  color: #333;
-  font-size: var(--fontSize);
-  background-color: transparent;
-  overflow-x: hidden;
-  margin: 0;
-}
-
-/* Main content area */
-main {
-  position: relative;
-  background-color: white;
-  display: -ms-grid;
-  display: grid;
-  grid-auto-rows: -webkit-min-content;
-  grid-auto-rows: min-content;
-  overflow-x: hidden;
-  min-height: 100vh;
-  width: 100vw;
-  -webkit-transition: opacity .2s linear .2s,
-              visibility 0s linear .4s,
-              -webkit-transform .4s linear;
-  transition: opacity .2s linear .2s,
-              visibility 0s linear .4s,
-              -webkit-transform .4s linear;
-  -o-transition: transform .4s linear,
-              opacity .2s linear .2s,
-              visibility 0s linear .4s;
-  transition: transform .4s linear,
-              opacity .2s linear .2s,
-              visibility 0s linear .4s;
-  transition: transform .4s linear,
-              opacity .2s linear .2s,
-              visibility 0s linear .4s,
-              -webkit-transform .4s linear;
-  -webkit-transition-timing-function: ease-in-out, linear, linear;
-       -o-transition-timing-function: ease-in-out, linear, linear;
-          transition-timing-function: ease-in-out, linear, linear;
-}
-
-/* Navigation */
-header {
-  top: 0;
-  position: fixed;
-  height: var(--pinnedHeight);
-  z-index: 2;
-  grid-area: header;
-}
-
-menu {
-  position: relative;
-  display: none;
-  top: 0;
-  left: 0;
-  z-index: -10;
-  place-content: center;
-}
-
-#menu-list, #menu-list ul{
-  position: relative;
-  list-style-type: none;
-  display: -ms-grid;
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 2rem;
-  color: var(--primaryColorDarker);
-}
-
-#menu-list li {
-  width: 20rem;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  height: 100%;
-}
-
-#menu-list a {
-  text-decoration: none;
-  color: var(--primaryColorDarker);
-}
-
-.collapsable {
-  position: relative;
-  left: 0;
-}
-
-.collapsable > ul {
-  position: relative;
-  padding-top: 2rem;
-}
-
-.collapsable a {
-  position: relative;
-  margin-left: 2rem;
-}
-
-.collapsable a:hover {
-  color: var(--primaryColorDarker) !important;
-}
-
-#menu-list ::before{
-  position: relative;
-  left: -10px;
-  top: 5px;
-  font-size: var(--smallFont);
-  padding-top: 0.5rem;
-  padding-right: 0.5rem;
-  color: var(--secondaryColor);
-}
-
-.collapsable a {
-  color: var(--secondaryColorDarker)!important;
-}
-
-#menu-button {
-  position: relative;
-  font-family: 'lato', serif;
-  -ms-grid-row-align: start;
-  -ms-grid-column-align: start;
-  place-self: start;
-  left: 0.4rem;
-  top: 10px;
-}
-
-.nav svg {
-  position: relative;
-  -webkit-transform: rotate(90deg) scaleX(-1.2);
-      -ms-transform: rotate(90deg) scaleX(-1.2);
-          transform: rotate(90deg) scaleX(-1.2);
-  color: var(--primaryColor);
-}
-
-a:hover svg {
-  color: var(--secondaryColor)
-}
-
-.burger {
-  display: -ms-grid;
-  display: grid;
-  grid-auto-flow: column;
-  -webkit-column-gap: 1rem;
-          column-gap: 1rem;
-  width: 100%;
-  height: 100%;
-  top: 0!important;
-  left: 0;
-  position: absolute;
-}
-
-.nav {
-  text-decoration: none;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 100%;
-  grid-template-rows: 100%;
-  width: 100%;
-  z-index: 1;
-  list-style-type: none;
-  position: fixed;
-  height: inherit;
-  place-items: center;
-  margin: 0;
-  padding: 0;
-  -webkit-box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1),  0 -0.25rem 0.25rem rgba(0, 0, 0, 0.15);
-          box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1),  0 -0.25rem 0.25rem rgba(0, 0, 0, 0.15);
-  left: 0;
-  right: 0;
-  background-color: var(--primaryColorLighter);
-}
-
-.nav > *:nth-child(1) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-}
-
-.nav > *:nth-child(2) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-}
-
-.nav > *:nth-child(3) {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-}
-  .nav > ul {
-    height: 2rem;
-    z-index: 1;
-    position: fixed;
-  }
-
-  .nav img {
-    height: 2rem;
-  }
-
-  .nav > a {
-    text-decoration: none;
-  }
-  .list-item {
-    display: -ms-grid;
-    display: grid;
-    position: relative;
-    -ms-flex-line-pack: baseline;
-        align-content: baseline;
-  }
-/* Navigation end */
-features {
-  margin-top: 4rem;
-  grid-area: main;
-  display: -ms-grid;
-  display: grid;
-  grid-template-rows: repeat(auto-fill, minmax(200px, 250px));
-  place-items: center;
-  row-gap: 1rem;
-  width: 100vw;
-}
-/* Feature card with a centalised image */
-card {
-  position: relative;
-  height: 15rem;
-  display: -ms-grid;
-  display: grid;
-  grid: var(--cardGridSingleColumn);
-  width: 200px;
-  row-gap: 0.5rem;
-  place-content: center;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  z-index: 0;
-  text-align: center;
-  overflow: hidden;
-  background-color: var(--primaryColorLighter);
-  cursor: pointer;
-}
-  .card__header {
-    font-size: var(--largeFont);
-    grid-area: title;
-    font-family: 'Rubik', serif;
-    color: rgba(0, 0, 0, 1);
-    opacity: 1;
-    width: 100%;
-    height: 2em;
-    margin: 0;
-    word-wrap: none;
-    margin: 0;
-    padding: 0;
-  }
-  .card__img {
-    -o-object-fit: cover;
-       object-fit: cover;
-    border: 1px solid transparent;
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    grid-column: title-start / title-end;
-    grid-row: middle-start / lower-end;
-    z-index: -1;
-  }
-  .card__text {
-    background-color: var(--secondaryColor);
-    grid-area: lower;
-    font-family: 'Rubik', sans-serif;
-    max-width: 20em;
-    height: 100%;
-    width: 100%;
-    padding-top: 1rem;
-    opacity: 0;
-    -webkit-transition: opacity 100ms ease-in, background-color 150ms ease-out;
-    -o-transition: opacity 100ms ease-in, background-color 150ms ease-out;
-    transition: opacity 100ms ease-in, background-color 150ms ease-out;
-    z-index: 10;
-  }
-    card:hover > .card__text {
-      color: rgba(0, 0, 0, 1);
-      opacity: 1;
-      -webkit-transition: opacity 100ms ease-out, background-color 150ms ease-out;
-      -o-transition: opacity 100ms ease-out, background-color 150ms ease-out;
-      transition: opacity 100ms ease-out, background-color 150ms ease-out;
-    }
-/* Feature card end */
-
-/* Footer start */
-footer {
-  margin: 1rem 0;
-  width: 100vw;
-  background: #333;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.footer-list {
-  display: -ms-grid;
-  display: grid;
-  grid-auto-flow: row;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: -webkit-max-content;
-  grid-auto-rows: max-content;
-  width: 100%;
-  margin: 0;
-  padding: 1rem 0;
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
-  place-content: center;
-}
-
-.footer-list-item {
-  display: -ms-grid;
-  display: grid;
-  place-content: center;
-  grid-auto-rows: 1.5rem;
-  row-gap: 0.5rem;
-  text-align: center;
-  padding: 2rem 0;
-}
-
-.footer-list-item span {
-  color: whitesmoke;
-  font-size: var(--largeFont);
-}
-.footer-list-item a {
-  color: bisque;
-}
-/* Footer end */
-
-#mobileShareButton {
-  display: none;
-}
+:root{font-family:Rubik,sans-serif;--pinnedHeight:3rem;--primaryColor:rgb(25,118,210);--primaryColorDarker:rgb(0,75,160);--primaryColorLighter:rgb(225, 225, 225);--secondaryColor:rgb(244,67,54);--secondaryColorDarker:rgb(186,0,13);--secondaryColorLighter:rgb(255,121,97);--fontSize:12px;--xSmallFont:0.65em;--smallFont:0.8333em;--normalFont:1em;--largeFont:1.125em;--xLargeFont:1.5em;--xxLargeFont:2em;--titleFont:5em;--cardGridSingleColumn:"title" 2rem "middle" 6rem "lower" 3rem/1fr;font-display:fallback}body{text-decoration:none;color:#333;font-size:var(--fontSize);background-color:transparent;overflow-x:hidden;margin:0}main{position:relative;background-color:#fff;display:-ms-grid;display:grid;grid-auto-rows:-webkit-min-content;grid-auto-rows:min-content;overflow-x:hidden;min-height:100vh;width:100vw;-webkit-transition:opacity .2s linear .2s,visibility 0s linear .4s,-webkit-transform .4s linear;transition:opacity .2s linear .2s,visibility 0s linear .4s,-webkit-transform .4s linear;-o-transition:transform .4s linear,opacity .2s linear .2s,visibility 0s linear .4s;transition:transform .4s linear,opacity .2s linear .2s,visibility 0s linear .4s;transition:transform .4s linear,opacity .2s linear .2s,visibility 0s linear .4s,-webkit-transform .4s linear;-webkit-transition-timing-function:ease-in-out,linear,linear;-o-transition-timing-function:ease-in-out,linear,linear;transition-timing-function:ease-in-out,linear,linear}header{top:0;position:fixed;height:var(--pinnedHeight);z-index:2;grid-area:header}menu{position:relative;display:none;top:0;left:0;z-index:-10;place-content:center}#menu-list,#menu-list ul{position:relative;list-style-type:none;display:-ms-grid;display:grid;grid-auto-flow:row;row-gap:2rem;color:var(--primaryColorDarker)}#menu-list li{width:20rem;-webkit-box-sizing:border-box;box-sizing:border-box;height:100%}#menu-list a{text-decoration:none;color:var(--primaryColorDarker)}.collapsable{position:relative;left:0}.collapsable>ul{position:relative;padding-top:2rem}.collapsable a{position:relative;margin-left:2rem}.collapsable a:hover{color:var(--primaryColorDarker)!important}#menu-list ::before{position:relative;left:-10px;top:5px;font-size:var(--smallFont);padding-top:.5rem;padding-right:.5rem;color:var(--secondaryColor)}.collapsable a{color:var(--secondaryColorDarker)!important}#menu-button{position:relative;font-family:lato,serif;-ms-grid-row-align:start;-ms-grid-column-align:start;place-self:start;left:.4rem;top:10px}.nav svg{position:relative;-webkit-transform:rotate(90deg) scaleX(-1.2);-ms-transform:rotate(90deg) scaleX(-1.2);transform:rotate(90deg) scaleX(-1.2);color:var(--primaryColor)}a:hover svg{color:var(--secondaryColor)}.burger{display:-ms-grid;display:grid;grid-auto-flow:column;-webkit-column-gap:1rem;column-gap:1rem;width:100%;height:100%;top:0!important;left:0;position:absolute}.nav{text-decoration:none;display:-ms-grid;display:grid;-ms-grid-columns:1fr 1fr 1fr;grid-template-columns:1fr 1fr 1fr;-ms-grid-rows:100%;grid-template-rows:100%;width:100%;z-index:1;list-style-type:none;position:fixed;height:inherit;place-items:center;margin:0;padding:0;-webkit-box-shadow:0 .25rem .25rem rgba(0,0,0,.1),0 -.25rem .25rem rgba(0,0,0,.15);box-shadow:0 .25rem .25rem rgba(0,0,0,.1),0 -.25rem .25rem rgba(0,0,0,.15);left:0;right:0;background-color:var(--primaryColorLighter)}.nav>:nth-child(1){-ms-grid-row:1;-ms-grid-column:1}.nav>:nth-child(2){-ms-grid-row:1;-ms-grid-column:2}.nav>:nth-child(3){-ms-grid-row:1;-ms-grid-column:3}.nav>ul{height:2rem;z-index:1;position:fixed}.nav img{height:2rem}.nav>a{text-decoration:none}.list-item{display:-ms-grid;display:grid;position:relative;-ms-flex-line-pack:baseline;align-content:baseline}features{margin-top:4rem;grid-area:main;display:-ms-grid;display:grid;grid-template-rows:repeat(auto-fill,minmax(200px,250px));place-items:center;row-gap:1rem;width:100vw}card{position:relative;height:15rem;display:-ms-grid;display:grid;grid:var(--cardGridSingleColumn);width:200px;row-gap:.5rem;place-content:center;border:1px solid transparent;border-radius:5px;z-index:0;text-align:center;overflow:hidden;background-color:var(--primaryColorLighter);cursor:pointer}.card__header{font-size:var(--largeFont);grid-area:title;font-family:Rubik,serif;color:rgba(0,0,0,1);opacity:1;width:100%;height:2em;margin:0;word-wrap:none;margin:0;padding:0}.card__img{-o-object-fit:cover;object-fit:cover;border:1px solid transparent;border-radius:5px;width:100%;height:100%;position:relative;grid-column:title-start/title-end;grid-row:middle-start/lower-end;z-index:-1}.card__text{background-color:var(--secondaryColor);grid-area:lower;font-family:Rubik,sans-serif;max-width:20em;height:100%;width:100%;padding-top:1rem;opacity:0;-webkit-transition:opacity .1s ease-in,background-color 150ms ease-out;-o-transition:opacity .1s ease-in,background-color 150ms ease-out;transition:opacity .1s ease-in,background-color 150ms ease-out;z-index:10}card:hover>.card__text{color:rgba(0,0,0,1);opacity:1;-webkit-transition:opacity .1s ease-out,background-color 150ms ease-out;-o-transition:opacity .1s ease-out,background-color 150ms ease-out;transition:opacity .1s ease-out,background-color 150ms ease-out}footer{margin:1rem 0;width:100vw;background:#333;display:-webkit-box;display:-ms-flexbox;display:flex}.footer-list{display:-ms-grid;display:grid;grid-auto-flow:row;grid-auto-columns:1fr;grid-auto-rows:-webkit-max-content;grid-auto-rows:max-content;width:100%;margin:0;padding:1rem 0;height:-webkit-min-content;height:-moz-min-content;height:min-content;place-content:center}.footer-list-item{display:-ms-grid;display:grid;place-content:center;grid-auto-rows:1.5rem;row-gap:.5rem;text-align:center;padding:2rem 0}.footer-list-item span{color:#f5f5f5;font-size:var(--largeFont)}.footer-list-item a{color:bisque}#mobileShareButton{display:none}
