--- a/css/misc.css
+++ b/css/misc.css
@@ -1,36 +1,1 @@
-.company-color {
-  color: rgba(255, 57, 57, 1)
-}
-
-.hide-link {
-  text-decoration: none;
-}
-
-i {
-  font-size: 2em;
-  display: relative;
-  color: var(--primaryColor);
-}
-
-#hide-menu {
-  position: absolute;
-  z-index: 100;
-  cursor: pointer;
-  display: flex;
-  width: 10rem;
-  height: 4rem;
-}
-
-#hide-menu a {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-#hide-menu > i {
-  pointer-events: none;
-}
-
-#svgInfo {
-  width: 100%;
-  height: 100%;
-}
+.company-color{color:rgba(255,57,57,1)}.hide-link{text-decoration:none}i{font-size:2em;display:relative;color:var(--primaryColor)}#hide-menu{position:absolute;z-index:100;cursor:pointer;display:flex;width:10rem;height:4rem}#hide-menu a{position:relative;width:100%;height:100%}#hide-menu>i{pointer-events:none}#svgInfo{width:100%;height:100%}
